chore(ci): test java on multiple versions (#3651) (generated) [skip ci]
Co-authored-by: Pierre Millot <pierre.millot@algolia.com>