@@ -110,8 +110,8 @@ class SnippetPersonalizationClient {
     // Call the API
     client.setPersonalizationStrategy(
       new PersonalizationStrategyParams()
-        .setEventScoring(List.of(new EventScoring().setScore(42).setEventName("Algolia").setEventType(EventType.CLICK)))
-        .setFacetScoring(List.of(new FacetScoring().setScore(42).setFacetName("Event")))
+        .setEventScoring(Arrays.asList(new EventScoring().setScore(42).setEventName("Algolia").setEventType(EventType.CLICK)))
+        .setFacetScoring(Arrays.asList(new FacetScoring().setScore(42).setFacetName("Event")))
         .setPersonalizationImpact(42)
     );
     // SEPARATOR<
